buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath "com.avast.gradle:gradle-docker-compose-plugin:0.17.6"
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'com.avast.gradle.docker-compose' version '0.17.6'
}

group = 'ru.cft'
version = '0.0.1'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.h2database:h2'

	implementation 'io.springfox:springfox-swagger2:3.0.0'
	implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	implementation 'org.flywaydb:flyway-core'

	compileOnly 'org.projectlombok:lombok'

	implementation 'org.modelmapper:modelmapper:2.3.5'

	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	implementation 'javax.validation:validation-api:2.0.1.Final'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'

	implementation 'org.glassfish:javax.el:3.0.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'

	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
	implementation 'jakarta.validation:jakarta.validation-api:3.0.0'
	implementation 'org.hibernate:hibernate-validator:4.3.2.Final'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	manifest {
		attributes 'Main-Class': 'ru.cft.shift.lab.ledin.RangeManagerApplication'
	}
}